--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "foundry-learn/lib/forge-std"]
 	path = foundry-learn/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-learn/lib/openzeppelin-contracts"]
+	path = foundry-learn/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "foundry-learn/lib/openzeppelin-contracts-upgradeable"]
+	path = foundry-learn/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
