--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "foundry-learn/lib/openzeppelin-contracts-upgradeable"]
 	path = foundry-learn/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "data-type/lib/forge-std"]
+	path = data-type/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
