--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,18 @@
 [submodule "data-type/lib/openzeppelin-contracts-upgradeable"]
 	path = data-type/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "funding-manager/lib/forge-std"]
+	path = funding-manager/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "funding-manager/lib/openzeppelin-contracts"]
+	path = funding-manager/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "funding-manager/lib/openzeppelin-contracts-upgradeable"]
+	path = funding-manager/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
