--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "funding-manager/lib/openzeppelin-contracts-upgradeable"]
 	path = funding-manager/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "contracts-advance/lib/forge-std"]
+	path = contracts-advance/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
