--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "token-issure/lib/openzeppelin-contracts-upgradeable"]
 	path = token-issure/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "event-predict/lib/forge-std"]
+	path = event-predict/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
