--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,9 @@
 [submodule "event-predict/lib/forge-std"]
 	path = event-predict/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contracts-advance/lib/openzeppelin-contracts"]
+	path = contracts-advance/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "contracts-advance/lib/openzeppelin-contracts-upgradeable"]
+	path = contracts-advance/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
